Update HowLongToBeat panel in DetailsView - Round the HLTB progress bar - Move the HLTB button next to the progress bar - Restyled the HLTB data grid similar to FusionX theme

--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -1074,31 +1074,98 @@
                                                     <Grid>
                                                         <Border Style="{DynamicResource OutlineBorderSidePanelsBorder}" />
                                                         <Border Style="{DynamicResource OutlineBorderSidePanels}" />
-                                                        <Border Padding="10" >
+                                                        <Border Padding="10">
                                                             <StackPanel>
-                                                                <ContentControl x:Name="HowLongToBeat_PluginProgressBar" HorizontalAlignment="Left" Margin="0,0,0,10"
-                                                                                Width="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type StackPanel}}, Path=ActualWidth}"/>
-                                                                <ContentControl x:Name="HowLongToBeat_PluginButton" HorizontalAlignment="Right" Margin="0,0,0,10"
-                                                                                Visibility="{PluginSettings Plugin=HowLongToBeat, Path=EnableIntegrationButton, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                                                                <ContentControl ContentTemplate="{DynamicResource HltbDataGridTemplate}"
-                                                                                x:Name="HltbDataGrid"
-                                                                                Tag="{DynamicResource DetailsViewShowHltbDataGrid}">
-                                                                    <ContentControl.Style>
-                                                                        <Style>
-                                                                            <Setter Property="Control.Visibility" Value="Collapsed" />
+                                                                <Grid>
+                                                                    <Grid.ColumnDefinitions>
+                                                                        <ColumnDefinition Width="*" />
+                                                                        <ColumnDefinition Width="Auto" />
+                                                                    </Grid.ColumnDefinitions>
+                                                                    <StackPanel Grid.Column="0" Margin="-1,0,5,5">
+                                                                        <Grid>
+                                                                            <Border Name="HLTB_mask"
+                                                                                    Background="#1e1e1e"
+                                                                                    CornerRadius="{DynamicResource ControlCornerRadius}"
+                                                                                    Width="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type StackPanel}}, Path=ActualWidth}" />
+                                                                            <StackPanel>
+                                                                                <StackPanel.OpacityMask>
+                                                                                    <VisualBrush Visual="{Binding ElementName=HLTB_mask}"/>
+                                                                                </StackPanel.OpacityMask>
+                                                                                <ContentControl x:Name="HowLongToBeat_PluginProgressBar" HorizontalAlignment="Stretch" Height="25" 
+                                                                                            Width="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type StackPanel}}, Path=ActualWidth}"/>
+                                                                            </StackPanel>
+                                                                        </Grid>
+                                                                    </StackPanel>
+                                                                    <StackPanel Grid.Column="1" Margin="5,0,0,5">
+                                                                        <ContentControl x:Name="HowLongToBeat_PluginButton" HorizontalAlignment="Right" Height="25" 
+                                                                                        Visibility="{PluginSettings Plugin=HowLongToBeat, Path=EnableIntegrationButton, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}" />   
+                                                                    </StackPanel>
+                                                                </Grid>
+                                                                <Grid Tag="{DynamicResource DetailsViewShowHltbDataGrid}">
+                                                                    <Grid.Style>
+                                                                        <Style TargetType="Grid">
+                                                                            <Setter Property="Visibility" Value="Collapsed" />
                                                                             <Style.Triggers>
-                                                                                <MultiDataTrigger>
-                                                                                    <MultiDataTrigger.Conditions>
-                                                                                        <Condition Binding="{PluginSettings Plugin=HowLongToBeat, Path=HasData, FallbackValue=False}" Value="True" />
-                                                                                        <Condition Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag, FallbackValue=False}" Value="True" />
-                                                                                    </MultiDataTrigger.Conditions>
-                                                                                    <Setter Property="Control.Visibility" Value="Visible" />
-                                                                                </MultiDataTrigger>
+                                                                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag, FallbackValue=False}" Value="True">
+                                                                                    <Setter Property="Visibility" Value="Visible" />
+                                                                                </DataTrigger>
                                                                             </Style.Triggers>
                                                                         </Style>
-                                                                    </ContentControl.Style>
-                                                                </ContentControl>
-                                                                
+                                                                    </Grid.Style>
+                                                                    <Grid.Resources>
+                                                                        <Style TargetType="Label" x:Key="HltbGridLabelStyle">
+                                                                            <Setter Property="FontSize" Value="{DynamicResource FontSizeSmall}" />
+                                                                            <Setter Property="Foreground" Value="{DynamicResource TextBrushDarker}" />
+                                                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                                                            <Setter Property="Margin" Value="0,4,0,0" />
+                                                                        </Style>
+                                                                        <Style TargetType="TextBlock" x:Key="HltbGridTextStyle" BasedOn="{StaticResource BaseTextBlockStyle}">
+                                                                            <Setter Property="Margin" Value="12,8,12,8" />
+                                                                            <Setter Property="FontSize" Value="{DynamicResource FontSizeLarge}" />
+                                                                            <Setter Property="FontWeight" Value="Bold" />
+                                                                            <Setter Property="Visibility" Value="Visible" />
+                                                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                                                            <Style.Triggers>
+                                                                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Text}" Value="-">
+                                                                                    <Setter Property="Visibility" Value="Collapsed" />
+                                                                                </DataTrigger>
+                                                                            </Style.Triggers>
+                                                                        </Style>
+                                                                    </Grid.Resources>
+                                                                    <Grid.ColumnDefinitions>
+                                                                        <ColumnDefinition Width="*" />
+                                                                        <ColumnDefinition Width="*" />
+                                                                        <ColumnDefinition Width="*" />
+                                                                    </Grid.ColumnDefinitions>
+                                                                    <StackPanel Grid.Column="0" Margin="0,0,4,0">
+                                                                        <Label Content="{DynamicResource LOCHowLongToBeatMainStory}" Style="{DynamicResource HltbGridLabelStyle}"
+                                                                                Visibility="{Binding ElementName=MainStoryFormat, Path=Visibility}" />
+                                                                        <Border Background="{DynamicResource WindowBackgourndBrush}"
+                                                                                CornerRadius="{DynamicResource ControlCornerRadius}">
+                                                                            <TextBlock Name="MainStoryFormat" Style="{DynamicResource HltbGridTextStyle}"
+                                                                                    Text="{PluginSettings Plugin=HowLongToBeat, Path=MainStoryFormat, FallbackValue='-'}" />
+                                                                        </Border>
+                                                                    </StackPanel>
+                                                                    <StackPanel Grid.Column="1" Margin="4,0,4,0">
+                                                                        <Label Content="{DynamicResource LOCHowLongToBeatMainExtra}" Style="{DynamicResource HltbGridLabelStyle}"
+                                                                                Visibility="{Binding ElementName=MainExtraFormat, Path=Visibility}" />
+                                                                        <Border Background="{DynamicResource WindowBackgourndBrush}"
+                                                                                CornerRadius="{DynamicResource ControlCornerRadius}">
+                                                                            <TextBlock Name="MainExtraFormat" Style="{DynamicResource HltbGridTextStyle}"
+                                                                                    Text="{PluginSettings Plugin=HowLongToBeat, Path=MainExtraFormat, FallbackValue='-'}" />
+                                                                        </Border>
+                                                                    </StackPanel>
+                                                                    <StackPanel Grid.Column="2" Margin="4,0,0,0">
+                                                                        <Label Content="{DynamicResource LOCHowLongToBeatCompletionist}"
+                                                                                Style="{DynamicResource HltbGridLabelStyle}"
+                                                                                Visibility="{Binding ElementName=CompletionistFormat, Path=Visibility}" />
+                                                                        <Border Background="{DynamicResource WindowBackgourndBrush}"
+                                                                                CornerRadius="{DynamicResource ControlCornerRadius}">
+                                                                            <TextBlock Name="CompletionistFormat" Style="{DynamicResource HltbGridTextStyle}"
+                                                                                    Text="{PluginSettings Plugin=HowLongToBeat, Path=CompletionistFormat, FallbackValue='-'}" />
+                                                                        </Border>
+                                                                    </StackPanel>
+                                                                </Grid>
                                                             </StackPanel>
                                                         </Border>
                                                     </Grid>
