Hide DLC panel when no controls are made visible (bug: if there is no owned DLC and the EnableIntegrationListDlcOwned control is enabled, an empty panel will appear)

--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -1023,8 +1023,28 @@
                                                     </Grid>
                                                 </StackPanel>
                                                 
-                                                <StackPanel Name="CheckDlcPanel" Margin="0,0,0,15"
-                                                            Visibility="{PluginSettings Plugin=CheckDlc, Path=HasData, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                                <StackPanel Name="CheckDlcPanel" Margin="0,0,0,15">
+                                                            <!-- Visibility="{PluginSettings Plugin=CheckDlc, Path=HasData, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}"> -->
+                                                    <StackPanel.Style>
+                                                        <Style TargetType="StackPanel">
+                                                            <Setter Property="Visibility" Value="Visible" />
+                                                            <Style.Triggers>
+                                                                <!-- If no controls are enabled, hide the panel. -->
+                                                                <MultiDataTrigger>
+                                                                    <MultiDataTrigger.Conditions>
+                                                                        <Condition Binding="{PluginSettings Plugin=CheckDlc, Path=EnableIntegrationListDlcAll, FallbackValue=False}" Value="False" />
+                                                                        <Condition Binding="{PluginSettings Plugin=CheckDlc, Path=EnableIntegrationListDlcOwned, FallbackValue=False}" Value="False" />
+                                                                        <Condition Binding="{PluginSettings Plugin=CheckDlc, Path=EnableIntegrationListDlcNotOwned, FallbackValue=False}" Value="False" />
+                                                                    </MultiDataTrigger.Conditions>
+                                                                    <Setter Property="Visibility" Value="Collapsed" />
+                                                                </MultiDataTrigger>
+                                                                <!-- If there is no data, hide the panel. -->
+                                                                <DataTrigger Binding="{PluginSettings Plugin=CheckDlc, Path=HasData, FallbackValue=False}" Value="False">
+                                                                    <Setter Property="Visibility" Value="Collapsed" />
+                                                                </DataTrigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </StackPanel.Style>
                                                     <StackPanel.Resources>
                                                         <Style TargetType="ListBox">
                                                             <Setter Property="Background" Value="Transparent" />
@@ -1036,9 +1056,12 @@
                                                         <Border Style="{DynamicResource OutlineBorderSidePanelsBorder}" />
                                                         <Border Style="{DynamicResource OutlineBorderMainPanels}" />
                                                         <StackPanel Orientation="Vertical" Margin="10">
-                                                            <ContentControl x:Name="CheckDlc_PluginListDlcAll" Height="700" Margin="0,0,0,10"/>
-                                                            <ContentControl x:Name="CheckDlc_PluginListDlcOwned" Height="700" Margin="0,0,0,10"/>
-                                                            <ContentControl x:Name="CheckDlc_PluginListDlcNotOwned" Height="700" Margin="0,0,0,10"/>
+                                                            <ContentControl x:Name="CheckDlc_PluginListDlcAll" Height="700" Margin="0,0,0,10"
+                                                                Visibility="{PluginSettings Plugin=CheckDlc, Path=EnableIntegrationListDlcAll, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                                            <ContentControl x:Name="CheckDlc_PluginListDlcOwned" Height="700" Margin="0,0,0,10"
+                                                                Visibility="{PluginSettings Plugin=CheckDlc, Path=EnableIntegrationListDlcOwned, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                                            <ContentControl x:Name="CheckDlc_PluginListDlcNotOwned" Height="700" Margin="0,0,0,10"
+                                                                Visibility="{PluginSettings Plugin=CheckDlc, Path=EnableIntegrationListDlcNotOwned, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                                                         </StackPanel>
                                                     </Grid>
                                                 </StackPanel>
