DetailsViewGameOverview: Remove Key attributes from DrawingImages

--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -376,8 +376,8 @@
                                                         </Viewbox.Style>
                                                         <Image Height="100" Width="100">
                                                             <Image.Source>
-                                                                <DrawingImage x:Key="_17xct1dwtz9mcd3vgicDrawingImage">
-                                                                <DrawingImage.Drawing>
+                                                                <DrawingImage>
+                                                                    <DrawingImage.Drawing>
                                                                         <DrawingGroup ClipGeometry="M0,0 V36 H36 V0 H0 Z">
                                                                         <GeometryDrawing Geometry="F1 M36,36z M0,0z M10.1777,10.0258L10.3929,9.80693 10.3929,9.49999 10.3929,5.52777 14.2857,5.52777 14.6001,5.52777 14.8205,5.30358 18,2.06976 21.1795,5.30358 21.3999,5.52777 21.7143,5.52777 25.6071,5.52777 25.6071,9.50001 25.6071,9.80696 25.8223,10.0258 28.5553,12.8055 25.8223,15.5853 25.6071,15.8041 25.6071,16.1111 25.6071,20.0833 21.7143,20.0833 21.3999,20.0833 21.1795,20.3075 18,23.5413 14.8205,20.3075 14.6001,20.0833 14.2857,20.0833 10.3929,20.0833 10.3929,16.1111 10.3929,15.8042 10.1777,15.5853 7.44464,12.8055 10.1777,10.0258z M14.7399,28.0317L11.56,33.4221 9.85164,29.9469 9.6456,29.5278 9.17857,29.5278 6.29474,29.5278 8.68445,25.3611 12.1142,25.3611 14.7399,28.0317z M26.8214,29.5278L26.3544,29.5278 26.1484,29.9469 24.44,33.4221 21.2601,28.0317 23.8858,25.3611 27.3155,25.3611 29.7053,29.5278 26.8214,29.5278z">
                                                                             <GeometryDrawing.Brush>
@@ -425,7 +425,7 @@
                                                         </Viewbox.Style>
                                                         <Image Height="100" Width="100">
                                                             <Image.Source>
-                                                                <DrawingImage x:Key="achievements_whiteDrawingImage">
+                                                                <DrawingImage>
                                                                     <DrawingImage.Drawing>
                                                                         <DrawingGroup ClipGeometry="M0,0 V36 H36 V0 H0 Z">
                                                                             <GeometryDrawing Brush="{DynamicResource DetailsViewHeaderIconsFillBrush}" Geometry="F0 M36,36z M0,0z M10.178,10.026L10.393,9.807 10.393,5.528 14.6,5.528 14.82,5.304 18,2.07 21.18,5.304 21.4,5.528 25.607,5.528 25.607,9.807 25.822,10.026 28.555,12.806 25.822,15.585 25.607,15.804 25.607,20.083 21.4,20.083 21.18,20.308 18,23.541 14.82,20.308 14.6,20.083 10.393,20.083 10.393,15.804 10.178,15.585 7.445,12.806 10.178,10.026z M18,7.5C14.964,7.5 12.5,9.964 12.5,13 12.5,16.036 14.964,18.5 18,18.5 21.036,18.5 23.5,16.036 23.5,13 23.5,9.964 21.036,7.5 18,7.5z M14.74,28.032L11.56,33.422 9.852,29.947 9.646,29.528 6.295,29.528 8.684,25.361 12.114,25.361 14.74,28.032z M29.705,29.528L26.354,29.528 26.148,29.947 24.44,33.422 21.26,28.032 23.886,25.361 27.316,25.361 29.705,29.528z">
@@ -1295,8 +1295,8 @@
                                                                                     <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
                                                                                 </Image.RenderTransform>
                                                                                 <Image.Source>
-                                                                                    <DrawingImage x:Key="_17xct1dwtz9mcd3vgicDrawingImage">
-                                                                                    <DrawingImage.Drawing>
+                                                                                    <DrawingImage>
+                                                                                        <DrawingImage.Drawing>
                                                                                             <DrawingGroup ClipGeometry="M0,0 V36 H36 V0 H0 Z">
                                                                                             <GeometryDrawing Geometry="F1 M36,36z M0,0z M10.1777,10.0258L10.3929,9.80693 10.3929,9.49999 10.3929,5.52777 14.2857,5.52777 14.6001,5.52777 14.8205,5.30358 18,2.06976 21.1795,5.30358 21.3999,5.52777 21.7143,5.52777 25.6071,5.52777 25.6071,9.50001 25.6071,9.80696 25.8223,10.0258 28.5553,12.8055 25.8223,15.5853 25.6071,15.8041 25.6071,16.1111 25.6071,20.0833 21.7143,20.0833 21.3999,20.0833 21.1795,20.3075 18,23.5413 14.8205,20.3075 14.6001,20.0833 14.2857,20.0833 10.3929,20.0833 10.3929,16.1111 10.3929,15.8042 10.1777,15.5853 7.44464,12.8055 10.1777,10.0258z M14.7399,28.0317L11.56,33.4221 9.85164,29.9469 9.6456,29.5278 9.17857,29.5278 6.29474,29.5278 8.68445,25.3611 12.1142,25.3611 14.7399,28.0317z M26.8214,29.5278L26.3544,29.5278 26.1484,29.9469 24.44,33.4221 21.2601,28.0317 23.8858,25.3611 27.3155,25.3611 29.7053,29.5278 26.8214,29.5278z">
                                                                                                 <GeometryDrawing.Brush>
